Fixing search box suggestions search scope
Adding the aq parameter to ensure the search returning @systitle
suggestions include results only for the source.coveo.com site.

--- a/_includes/_search.html
+++ b/_includes/_search.html
@@ -23,7 +23,8 @@
             populateOmniBoxEventArgs.closeOmniBox();
             Coveo.Rest.SearchEndpoint.endpoints["default"]
                     .search({
-                      q: '@systitle=="' + valueSelected + '"'
+                      q: '@systitle=="' + valueSelected + '"',
+                      aq: SuggestionScope
                     })
                     .done(function (results) {
                       window.location = results.results[0].clickUri;
