Fixing UA pageTitle value

--- a/_includes/_coveo-analytics.html
+++ b/_includes/_coveo-analytics.html
@@ -24,7 +24,7 @@
           /*"coveoSiteSection": ,*/
           "referrer": document.referrer,
           "referrerHost": document.referrer.split('/')[2],
-          "pageTitle": $('meta[name=title]').attr("content"),
+          "pageTitle": $('meta[property=title]').attr("content"),
           /*"pageAudience": $('meta[name=audience]').attr("content"),*/
           /*"pageLanguage": $('meta[name=lang]').attr("content"),*/
           "pageUserAgent": navigator.userAgent
