--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% if page.title %}{{ page.title }} &mdash; {{ site.inc.title }}{% else %}{{ site.inc.title }} &mdash; {{ site.inc.subtitle }}{% endif %}</title>
     {% if site.inc.google_font %}<link href="https://fonts.googleapis.com/css?family={{ site.inc.google_font }}" rel="stylesheet" type="text/css">{% endif %}
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css"/>
-    <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="{{ site.baseurl }}/images/{{ site.inc.logo }}"/>
-    <link href="{{ site.baseurl }}/feed.xml" rel="alternate" type="application/rss+xml" title="{{ site.inc.title }}" />
+    <link rel="stylesheet" type="text/css" href="{{ site.github.url }}/css/main.css"/>
+    <link rel="shortcut icon" href="{{ site.github.url }}/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="{{ site.github.url }}/images/{{ site.inc.logo }}"/>
+    <link href="{{ site.github.url }}/feed.xml" rel="alternate" type="application/rss+xml" title="{{ site.inc.title }}" />
 <meta content="{{ site.title }}" property="og:site_name">
 
 {% if page.title %}
@@ -30,21 +30,21 @@
 {% endif %}
 
 {% if page.url %}
-  <meta content="{{ site.baseurl }}{{ page.url }}" property="og:url">
+  <meta content="{{ site.github.url }}{{ page.url }}" property="og:url">
 {% endif %}
 
 {% if page.date %}
   <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
-  <meta content="{{ site.baseurl }}/about/" property="article:author">
+  <meta content="{{ site.github.url }}/about/" property="article:author">
 {% endif %}
 
 {% if page.image %}
-  <meta content="{{ site.baseurl }}/{{ page.image }}" property="og:image">
+  <meta content="{{ site.github.url }}/{{ page.image }}" property="og:image">
 {% else %}
 {% if page.cover_image %}
-  <meta property="og:image" content="{{ site.baseurl }}/images/{{ page.cover_image }}"/>
+  <meta property="og:image" content="{{ site.github.url }}/images/{{ page.cover_image }}"/>
 {% else %}
-  <meta property="og:image" content="{{ site.baseurl }}/images/{{ site.inc.logo }}"/>
+  <meta property="og:image" content="{{ site.github.url }}/images/{{ site.inc.logo }}"/>
 {% endif %}
 {% endif %}
 
@@ -65,7 +65,7 @@
   <meta name="author" content="{{ page.author.name }}">
 {% endif %}
 
-<link rel="canonical" href="{{ site.baseurl }}{{ page.url }}">
+<link rel="canonical" href="{{ site.github.url }}{{ page.url }}">
 {% if page.site.gplus %}<link rel="publisher" href="https://plus.google.com/{{ site.inc.gplus }}">{% endif %}
 {% if page.author.gplus %}<link rel="author" href="https://plus.google.com/{{ page.author.gplus }}">{% endif %}
 
@@ -79,7 +79,6 @@
         <div class="container">
             <div id="logo">
     		    <a href="/">
-    			    <!--<img src="{{ site.baseurl }}/images/{{ site.inc.logo }}" title="back to home page" alt="Coveo Source Blog">-->
     			    <img src="https://s3.amazonaws.com/coveostatic/logo-coveo_community.png" title="back to home page" alt="Coveo Source Blog">
     		    </a>
     	    </div>
@@ -128,7 +127,7 @@
             {% if site.inc.facebook %}
             <a href="http://facebook.com/{{ site.inc.facebook }}" title="Follow on Facebook" target="_blank"><i class="icon icon-facebook black"></i></a>
             {% endif %}
-            <a href="{{ site.baseurl }}/feed.xml" title="RSS Feed">
+            <a href="{{ site.github.url }}/feed.xml" title="RSS Feed">
                 <i class="icon icon-rss black"></i>
             </a>
         </nav>
