--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: base
 {% if page.cover_image %}
 <div class="article-cover">
     <div>
-        <img src="{{ site.baseurl }}/images/{{ page.cover_image }}" class="image">
+        <img src="{{ site.github.url }}/images/{{ page.cover_image }}" class="image">
     </div>
 </div>
 {% endif %}
@@ -40,7 +40,7 @@ layout: base
         <footer>
             <address>
                {% if page.author.imageURL %}<img src="{{ page.author.imageURL }}" />{% endif %}
-               {% if page.author.image %}<img src="{{ site.baseurl }}/images/{{ page.author.image }}"/>{% endif %}
+               {% if page.author.image %}<img src="{{ site.github.url }}/images/{{ page.author.image }}"/>{% endif %}
                 <p>Written by <strong>{% if page.author.twitter %}<a rel="author" href="https://twitter.com/{{ page.author.twitter }}" title="{{ page.author_name }}" target="_blank">{% endif %}{{ page.author.name }}{% if page.author.twitter %}</a>{% endif %}</strong><br>
                 <span class="muted">{{ page.author.bio }}</span>
                 </p>
