--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="google-site-verification" content="xWtehtrl92ZffHdBGNoyIRZyd7v7vZLHQ5LtJF5M2XE" /> <!-- Give Access to MAV -->
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% if page.title %}{{ page.title }} &mdash; {{ site.inc.title }}{% else %}{{ site.inc.title }} &mdash; {{ site.inc.subtitle }}{% endif %}</title>
