--- a/_includes/_search.html
+++ b/_includes/_search.html
@@ -1,53 +1,2 @@
-<script src="/js/d3.min.js"></script>
-<script src="/js/CoveoJsSearch.WithDependencies.min.js"></script>
-<script type="text/javascript">
-  // Set the Coveo Cloud Organization search and analytics tokens
-  var uaToken = '7b9b9300-3901-437b-bafd-51ae596f1b16';
-  var searchToken = '7b9b9300-3901-437b-bafd-51ae596f1b16';
-  var origin = 'TechBlog';
-  var TechDocSearchPage = 'http://search.coveo.com/';
-  var SuggestionScope = ' @syssource=("Web - TechBlog") ';
-
-  $(function () {
-    Coveo.Rest.SearchEndpoint.endpoints["default"] = new Coveo.Rest.SearchEndpoint({
-      restUri: 'https://cloudplatform.coveo.com/rest/search',
-      accessToken: searchToken
-    });
-    $("#searchBox").on("afterInitialization", function(){
-      $("#searchBox").coveo('state', 'site', origin);
-    });
-    $('#searchBox').coveo('initSearchBox', TechDocSearchPage, {
-      TopFieldSuggestions: {
-        omniboxSuggestionOptions: {
-          onSelect: function (valueSelected, populateOmniBoxEventArgs) {
-            populateOmniBoxEventArgs.closeOmniBox();
-            Coveo.Rest.SearchEndpoint.endpoints["default"]
-                    .search({
-                      q: '@systitle=="' + valueSelected + '"',
-                      aq: SuggestionScope
-                    })
-                    .done(function (results) {
-                      window.location = results.results[0].clickUri;
-                    })
-          }
-        },
-        queryOverride: SuggestionScope
-      }
-    });
-  });
-
-    /*$(function () {
-        Coveo.Rest.SearchEndpoint.endpoints["default"] = new Coveo.Rest.SearchEndpoint({
-            restUri: 'https://developers.coveo.com/coveorest/search',
-            anonymous: true
-        });
-      if (document.location.pathname !== "/search/") {
-        $('#searchBox').coveo('initSearchBox', '/search');
-      } else if (document.location.pathname == "/search/" ) {
-        var mySearchBox = $("#searchBox");
-        $("#search").coveo("init", {
-            externalComponents : [mySearchBox]
-        })        
-      }
-    });*/
-</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://s3.amazonaws.com/coveostatic/CoveoJsSearchV1.0.318.4/js/CoveoJsSearch.WithDependencies.min.js"></script>
