Fix Responsive new Banner

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -86,7 +86,7 @@
 			<div class="logos">
 				<a href="http://www.coveo.com" class="logo" title="Coveo community"></a>
 				<h3><a href="#">Community</a></h3></div>
-			<h1 class="currentSiteName"><em>Support</em> <span>Menu<i class="arrow"></i></span></h1>
+			<h1 class="currentSiteName"><em>Tech Blog</em> <span>Menu<i class="arrow"></i></span></h1>
 			<nav>
 				<ul class="menu floated">
 					<li><a id="jsSupport" href="https://support.coveo.com"  target="_blank">Support</a></li>
