--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: base
 
 <div class="illustration">
     <div class="container">
-        <img src="{{ site.github.url }}/images/illustration-half.png" alt="">
+        <a href="/"><img src="{{ site.github.url }}/images/illustration-half.png" alt="Tech Blog" class="half-ill"></a>
     </div>
 </div>
 
