New links for search.coveo.com

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,9 +38,9 @@ layout: base
                 <div class="tags">
                       {% for tag in page.tags %}
                         {% if forloop.last %}
-                          <a href="https://search.coveo.com/#sort=relevancy&f:sourceFacet=[Web%20-%20TechBlog]&f:TagsFacet=[{{ tag }}]">{{ tag }}</a>
+                          <a href="https://support.coveo.com/s/search/All/Home/%40uri#t=All&sort=relevancy&f:@sitename=[Technical%20Blog]&f:@tags=[{{ tag }}]">{{ tag }}</a>                          
                         {% else %}
-                          <a href="https://search.coveo.com/#sort=relevancy&f:sourceFacet=[Web%20-%20TechBlog]&f:TagsFacet=[{{ tag }}]">{{ tag }}</a>
+                          <a href="https://support.coveo.com/s/search/All/Home/%40uri#t=All&sort=relevancy&f:@sitename=[Technical%20Blog]&f:@tags=[{{ tag }}]">{{ tag }}</a>                          
                         {% endif %}
                       {% endfor %}
                   </div>
