--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -14,7 +14,7 @@
 	{% include _search.html %}
 
     <link rel="stylesheet" type="text/css" href="{{ site.github.url | replace: 'http://', '//' }}/css/main.css"/>
-    <link rel="shortcut icon" href="{{ site.github.url | replace: 'http://', '//' }}/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="{{ site.github.url }}/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.github.url | replace: 'http://', '//' }}/images/apple-touch-icon-144x144-precomposed.png" />
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.github.url | replace: 'http://', '//' }}/images/apple-touch-icon-114x114-precomposed.png" />
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.github.url | replace: 'http://', '//' }}/images/apple-touch-icon-72x72-precomposed.png" />
