Main Coveo web site supports HTTPS too.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -98,7 +98,7 @@
 	<header>
 		<div class="upHeader clear">
 			<div class="logos">
-				<a href="http://www.coveo.com" class="logo" title="Coveo community"></a>
+				<a href="https://www.coveo.com" class="logo" title="Coveo community"></a>
 				<h3><a href="#">Community</a></h3></div>
 			<h1 class="currentSiteName"><em>Tech Blog</em> <span>Menu<i class="arrow"></i></span></h1>
 			<nav>
@@ -107,7 +107,7 @@
 					<li><a id="jsProductDocs" href="https://onlinehelp.coveo.com" target="_blank">Product docs</a></li>
 					<li><a id="jsDevDocs" href="https://developers.coveo.com" target="_blank">Developer docs</a></li>
 					<li><a id="jsAnswers" href="https://answers.coveo.com" target="_blank">Answers</a></li>
-					<li><a id="jsTraining" href="http://www.coveo.com/training" target="_blank">Training</a></li>
+					<li><a id="jsTraining" href="https://www.coveo.com/training" target="_blank">Training</a></li>
 					<li><a d="jsTechBlog" href="/"  class="current">Tech Blog</a></li>
 				</ul>
 				<ul class="externalbox with-sub">
