--- a/_includes/_search.html
+++ b/_includes/_search.html
@@ -1,2 +1,2 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://static.cloud.coveo.com/searchui/v2.4382/js/CoveoJsSearch.Lazy.min.js"></script>
+<script src="https://s3.amazonaws.com/coveostatic/CoveoJsSearchV1.0.318.4/js/CoveoJsSearch.WithDependencies.min.js"></script>
